# adamant

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_MSG.tmp  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT.md  clippy.toml  rust-toolchain.toml
crates/adamant-account/: Cargo.toml
crates/adamant-account/src/: lib.rs
crates/adamant-bytecode-format/: Cargo.toml  PROVENANCE.md
crates/adamant-bytecode-format/src/: ability.rs  address_pool.rs  bytecode.rs  code_unit.rs  constant.rs  definition.rs  error.rs  format_common.rs  handle.rs  identifier.rs  index.rs  instantiation.rs  lib.rs  metadata.rs  signature.rs  signature_token.rs  signature_token_kind.rs  u256.rs
crates/adamant-bytecode-format/tests/: cross_validation.rs
crates/adamant-cli/: Cargo.toml
crates/adamant-cli/src/: lib.rs  main.rs
crates/adamant-cli/tests/: integration.rs
crates/adamant-consensus/: Cargo.toml
crates/adamant-consensus/src/: active_set.rs  commit_sequencer.rs  commit_wave.rs  dag.rs  epoch.rs  genesis.rs  identity.rs  lib.rs  light_client.rs  mempool.rs  mempool_decryption.rs  schedule.rs  slashing.rs  slot.rs  tier.rs  validator.rs  vertex.rs  vrf.rs
crates/adamant-consensus/tests/: dag_bft_pipeline.rs  phase_7_pipeline.rs  wire_snapshots.rs
crates/adamant-consensus/tests/snapshots/: wire_snapshots__epoch_boundary_bcs.snap  wire_snapshots__mempool_envelope_threshold_prefix_4.snap  wire_snapshots__mempool_envelope_time_lock_prefix_4.snap  wire_snapshots__proof_commitment_bcs.snap  wire_snapshots__regime_state_time_lock.snap  wire_snapshots__slot_active_bcs.snap  wire_snapshots__slot_status_variant_active.snap  wire_snapshots__slot_status_variant_inactive.snap  wire_snapshots__slot_status_variant_standby.snap  wire_snapshots__slot_transfer_bcs.snap  wire_snapshots__state_commitment_bcs.snap  wire_snapshots__validator_id_bcs.snap  wire_snapshots__validator_public_keys_bcs_digest.snap  wire_snapshots__validator_public_keys_bcs_len.snap  wire_snapshots__vertex_id_bcs.snap
crates/adamant-crypto/: Cargo.toml
crates/adamant-crypto-blst-extra/: Cargo.toml
crates/adamant-crypto-blst-extra/src/: lib.rs
crates/adamant-crypto/src/: bls.rs  domain.rs  hash.rs  kzg.rs  lib.rs  ml_kem.rs  sig_classical.rs  sig_pq.rs  symmetric.rs  threshold.rs  vdf.rs  zk.rs
crates/adamant-crypto/src/vdf/: bqf.rs  envelope.rs  modular.rs  setup.rs  wesolowski.rs
crates/adamant-crypto/test-vectors/: README.md
crates/adamant-crypto/test-vectors/blake3/: blake3_kats.txt
crates/adamant-crypto/test-vectors/bls/: README.md
crates/adamant-crypto/test-vectors/ed25519/: rfc8032_kats.txt
crates/adamant-crypto/test-vectors/ml-dsa/: key_gen_kats.txt  sig_ver_kats.txt
crates/adamant-crypto/test-vectors/sha3/: sha3_256_kats.txt
crates/adamant-crypto/test-vectors/sha3-tagged/: tagged_sha3_256.txt
crates/adamant-crypto/test-vectors/shake256/: shake_256_kats.txt
crates/adamant-crypto/test-vectors/shake256-tagged/: tagged_shake_256.txt
crates/adamant-crypto/test-vectors/threshold/: README.md
crates/adamant-crypto/tests/: kzg_vdf_oracles.rs  proptest_roundtrips.rs
crates/adamant-halo2/: Cargo.toml  PROVENANCE.md
crates/adamant-halo2/src/: lib.rs  recursion.rs  sinsemilla.rs
crates/adamant-halo2/src/ecc/: chip.rs  mod.rs
crates/adamant-halo2/src/ecc/chip/: add.rs  add_incomplete.rs  constants.rs  mul.rs  mul_fixed.rs  witness_point.rs
crates/adamant-halo2/src/poseidon/: mod.rs  pow5.rs  test_vectors.rs
crates/adamant-halo2/src/poseidon/primitives/: mds.rs  mod.rs  p128pow5t3.rs
crates/adamant-halo2/src/proofs/: arithmetic.rs  circuit.rs  dev.rs  mod.rs  plonk.rs  poly.rs  transcript.rs
crates/adamant-halo2/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs  mod.rs
crates/adamant-light/: Cargo.toml
crates/adamant-light/src/: lib.rs  main.rs
crates/adamant-light/tests/: integration.rs
crates/adamant-network/: Cargo.toml
crates/adamant-network/src/: anti_dos.rs  lib.rs  mempool.rs  node.rs
crates/adamant-node/: Cargo.toml
crates/adamant-node/src/: lib.rs  main.rs
crates/adamant-node/tests/: integration.rs
crates/adamant-privacy/: Cargo.toml
crates/adamant-privacy/src/: assertion.rs  binding_sig.rs  encrypted_note.rs  epoch_recursion.rs  gnct.rs  lib.rs  memo.rs  note.rs  nullifier.rs  poseidon.rs  proving.rs  recursive_proof.rs  shielded_contract.rs  shielded_tx.rs  stealth.rs  value_commitment.rs  view_key.rs
crates/adamant-privacy/src/circuit/: merkle.rs  mod.rs  note_commitment.rs  nullifier.rs  range_check.rs  shielded_input.rs  shielded_output.rs  validity.rs  value_commitment.rs  value_commitment_chip.rs  value_commitment_chip_tables.rs
crates/adamant-privacy/tests/: no_upstream_halo2_in_production_deps.rs
crates/adamant-state/: Cargo.toml
crates/adamant-state/src/: lib.rs  merkle.rs  rules.rs  store.rs
crates/adamant-types/: Cargo.toml
crates/adamant-types/src/: address.rs  function_id.rs  lib.rs  lifecycle.rs  metadata.rs  module_ref.rs  mutability.rs  object.rs  object_id.rs  ownership.rs  signature.rs  stealth_commitment.rs  tx_hash.rs  type_id.rs  version.rs
crates/adamant-vm/: Cargo.toml
crates/adamant-vm/proptest-regressions/: README.md
crates/adamant-vm/src/: bytecode.rs  bytecode_wire.rs  lib.rs  module.rs  module_wire.rs  transaction.rs  tx_hash.rs  value.rs
crates/adamant-vm/src/runtime/: error.rs  executor.rs  frame.rs  gas.rs  interpreter.rs  mod.rs  module_helpers.rs  module_resolver_adapter.rs  native.rs  runtime_value.rs  scheduler.rs  state_buffer.rs  state_mutator.rs  state_view.rs  stdlib.rs  test_helpers.rs
crates/adamant-vm/src/validator/: config.rs  error.rs  mod.rs  rule_01_mutability.rs  rule_02_privacy.rs  rule_03_privacy_consistency.rs  rule_04_no_natives.rs  rule_05_no_global_storage.rs  rule_06_no_dynamic_dispatch.rs  rule_07_privacy_circuit_in_shielded_only.rs  rule_08_bounded_loops.rs  test_fixtures.rs  upgrade_compatibility.rs
crates/adamant-vm/tests/: no_sui_in_production_deps.rs
tools/gen-fixed-base-tables/: Cargo.toml
tools/gen-fixed-base-tables/src/: main.rs
(+113 files in other folders)
