# Adamant — Layer 1 blockchain protocol reference implementation.
# See CLAUDE.md and /whitepaper for context.
#
# MSRV policy:
# - Pre-v1.0: track latest stable Rust. The toolchain is pinned in
#   rust-toolchain.toml for reproducibility. Bumps are deliberate and land
#   in dedicated commits ("Bump Rust toolchain to <version>") with a brief
#   rationale. MSRV is not yet a public commitment.
# - At v1.0 (genesis-ready): MSRV is set explicitly and becomes part of
#   the release contract. Subsequent bumps are treated with the same
#   discipline as any other consensus-adjacent rule change.

[workspace]
resolver = "2"
members = [
    "crates/adamant-account",
    "crates/adamant-crypto",
    "crates/adamant-crypto-blst-extra",
    "crates/adamant-types",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/adamant-protocol/adamant"
authors = ["Adamant contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `cargo` group catches dependency-graph issues (duplicate deps, wildcard
# versions, missing license fields) that matter for a crypto-heavy
# workspace where the dependency surface is part of the audit posture.
cargo = { level = "warn", priority = -1 }
# `multiple_crate_versions` is allow-by-default *within* the cargo group,
# so promoting `cargo` to warn does not promote it. Pinned to warn
# explicitly because a crypto codebase cannot tolerate ambiguity about
# which version of a primitive crate is in scope. Verified to fire on a
# constructed runtime-path duplicate; see CONTRIBUTING.md "Linting
# discipline".
multiple_crate_versions = "warn"
# Pragmatic allow: crates are named adamant-*; types named e.g. `CryptoError`
# inside `adamant-crypto` would otherwise trip the lint structurally.
module_name_repetitions = "allow"

# Planned cryptographic dependencies, per whitepaper section 3. Versions are
# pinned best-effort at scaffold time and verified at first use; first-use
# commits adjust if upstream has moved. Each entry is mirrored in SECURITY.md
# with its `unsafe` surface and audit signal.
[workspace.dependencies]
# Hashing (whitepaper 3.3)
# sha3 pinned to exact patch version: this dependency carries every
# consensus-critical hash. Bumps go through SECURITY.md review.
sha3 = { version = "=0.10.9", default-features = false }
# blake3: pinned to exact patch version on first use. SIMD backends are
# integral to BLAKE3's performance rationale (whitepaper 3.3.2) so default
# features are kept; the runtime CPU-feature dispatch is documented in
# SECURITY.md as carrying upstream `unsafe`.
blake3 = "=1.8.5"
# Poseidon for use inside Halo 2 circuits (whitepaper 3.3.3, 3.7.1).
halo2_gadgets = { version = "0.3", default-features = false }

# Classical signatures (whitepaper 3.4.1)
# ed25519-dalek: pinned exactly.
# Features:
#  - "zeroize"   — SigningKey impls Zeroize / ZeroizeOnDrop.
#  - "rand_core" — gates SigningKey::generate(rng) (dalek 2.2 split).
#  - "std"       — needed by the zeroize derive on dalek's SigningKey.
# `fast` (a curve25519-dalek precomputed-tables flag) is intentionally
# skipped here; we revisit performance flags before mainnet.
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["zeroize", "rand_core", "std"] }

# Post-quantum signatures (whitepaper 3.4.2). Pre-1.0; pin to the exact
# release-candidate version and revisit before each upgrade.
# Features:
#  - "rand_core" (default) — gates `MlDsa65::key_gen(rng)`.
#  - "alloc"     (default) — required by the crate's encode/decode paths.
#  - "zeroize"   (opt-in)  — derives ZeroizeOnDrop on signing keys.
# `pkcs8` is intentionally skipped — we serialise via raw bytes, not PKCS#8.
ml-dsa = { version = "=0.1.0-rc.9", default-features = false, features = ["rand_core", "alloc", "zeroize"] }

# BLS12-381 signatures, pairing, and threshold encryption (whitepaper 3.4.3, 3.6).
# blst: pinned to exact patch version. Default features (none) are
# what we want — blst's inline assembly for BLS12-381 is unconditional,
# not feature-gated. `portable` would disable native-CPU optimisations;
# we revisit before mainnet only if cross-compilation issues surface.
blst = "=0.3.16"

# Symmetric AEAD (whitepaper 3.5)
# chacha20poly1305: pinned to exact patch version. Resolved on the
# RustCrypto 0.10 generation (transitives align with ed25519-dalek's
# tree; no new ecosystem-skew allowlist entries needed). zeroize
# feature wires Key zeroize-on-drop through the upstream crate.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }

# Memory hygiene and constant-time helpers
zeroize = { version = "=1.8.2", features = ["derive"] }
subtle = "=2.6.1"
# rand_core: workspace-level default has only the trait surface enabled.
# Per-crate dev-deps enable `getrandom` when an OS RNG is needed in tests.
rand_core = { version = "0.6", default-features = false }

# Canonical serialisation (whitepaper 5.1.8). BCS — Binary Canonical
# Serialization — is the consensus-critical encoding for every value
# that flows through hashes, signatures, or state commitments.
# Different version pins are not acceptable here: a bcs version skew
# could produce different canonical encodings of the same logical
# value and break consensus on a multi-implementation network. Pinned
# exactly. Feature surface is minimal; the crate has no optional
# features that affect encoding semantics.
bcs = "=0.1.6"
# serde provides the derive macros bcs consumes. Pinned to the exact
# version already present transitively (verified via Cargo.lock at
# first use) so promoting it to a direct dep does not introduce a
# duplicate. Default features (std) enable the const-generic
# `[T; N]` impls for arbitrary `N` (compressed-G₁ proof commitments
# and other 48-byte / 96-byte byte newtypes need N > 32, which the
# `no_std` build does not provide); the "derive" feature gates the
# proc-macro derive crate that BCS consumes.
serde = { version = "=1.0.228", features = ["derive"] }
# serde-big-array provides Serialize/Deserialize for fixed-size byte
# arrays beyond the 32-element ceiling of `serde 1.x`'s hand-written
# impls. Used via `#[serde(with = "BigArray")]` on the byte newtypes
# (`Address`, `ObjectId`, `TypeId`, `ProofCommitment`). The crate is
# `dtolnay`-maintained (same author as `serde`), `forbid(unsafe_code)`
# upstream, single-purpose, and depends only on `serde` itself — no
# additional transitives. Pinned exactly because the canonical
# encoding it produces is consensus-critical.
serde-big-array = "=0.5.1"

# Testing
proptest = "1.5"
hex = "0.4"
hex-literal = "0.4"
