# Adamant — Layer 1 blockchain protocol reference implementation.
# See CLAUDE.md and /whitepaper for context.
#
# MSRV policy:
# - Pre-v1.0: track latest stable Rust. The toolchain is pinned in
#   rust-toolchain.toml for reproducibility. Bumps are deliberate and land
#   in dedicated commits ("Bump Rust toolchain to <version>") with a brief
#   rationale. MSRV is not yet a public commitment.
# - At v1.0 (genesis-ready): MSRV is set explicitly and becomes part of
#   the release contract. Subsequent bumps are treated with the same
#   discipline as any other consensus-adjacent rule change.

[workspace]
resolver = "2"
members = [
    "crates/adamant-account",
    "crates/adamant-bytecode-format",
    "crates/adamant-crypto",
    "crates/adamant-crypto-blst-extra",
    "crates/adamant-halo2",
    "crates/adamant-privacy",
    "crates/adamant-state",
    "crates/adamant-types",
    "crates/adamant-vm",
    # Vendored upstream code per whitepaper §6.2.1.1 and vendor/README.md.
    # Sourced from Sui mainnet-v1.66.2 (commit
    # a9a6825eaf6273cc819ee3bcf65fd4909f7624a9, released 25 Feb 2026).
    # See each crate's PROVENANCE.md for full audit posture.
    # Batch 1 (§6.2.1.4–§6.2.1.5: bytecode format) landed at commit 4164e7b.
    # Batch 2 (§6.2.1.6: bytecode verifier) is being added in this scaffold;
    # actual upstream source-file copy follows in a separate vendor commit.
    "vendor/enum-compat-util",
    "vendor/move-abstract-interpreter",
    "vendor/move-abstract-stack",
    "vendor/move-binary-format",
    "vendor/move-borrow-graph",
    "vendor/move-bytecode-verifier",
    "vendor/move-bytecode-verifier-meter",
    "vendor/move-command-line-common",
    "vendor/move-core-types",
    "vendor/move-proc-macros",
    "vendor/move-regex-borrow-graph",
    "vendor/move-symbol-pool",
    "vendor/move-vm-config",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/adamant-protocol/adamant"
authors = ["Adamant contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `cargo` group catches dependency-graph issues (duplicate deps, wildcard
# versions, missing license fields) that matter for a crypto-heavy
# workspace where the dependency surface is part of the audit posture.
cargo = { level = "warn", priority = -1 }
# `multiple_crate_versions` is allow-by-default *within* the cargo group,
# so promoting `cargo` to warn does not promote it. Pinned to warn
# explicitly because a crypto codebase cannot tolerate ambiguity about
# which version of a primitive crate is in scope. Verified to fire on a
# constructed runtime-path duplicate; see CONTRIBUTING.md "Linting
# discipline".
multiple_crate_versions = "warn"
# Pragmatic allow: crates are named adamant-*; types named e.g. `CryptoError`
# inside `adamant-crypto` would otherwise trip the lint structurally.
module_name_repetitions = "allow"

# Planned cryptographic dependencies, per whitepaper section 3. Versions are
# pinned best-effort at scaffold time and verified at first use; first-use
# commits adjust if upstream has moved. Each entry is mirrored in SECURITY.md
# with its `unsafe` surface and audit signal.
[workspace.dependencies]
# Hashing (whitepaper 3.3)
# sha3 pinned to exact patch version: this dependency carries every
# consensus-critical hash. Bumps go through SECURITY.md review.
sha3 = { version = "=0.10.9", default-features = false }
# HKDF-SHA3-256 for §7.4.2 sub-view-key derivation (instance 26
# Path 1 amendment). hmac + hkdf pinned at the digest 0.10
# generation matching sha3 0.10.9.
hmac = { version = "=0.12.1", default-features = false }
hkdf = { version = "=0.12.4", default-features = false }
# blake3: pinned to exact patch version on first use. SIMD backends are
# integral to BLAKE3's performance rationale (whitepaper 3.3.2) so default
# features are kept; the runtime CPU-feature dispatch is documented in
# SECURITY.md as carrying upstream `unsafe`.
blake3 = "=1.8.5"
# Poseidon for use inside Halo 2 circuits (whitepaper 3.3.3, 3.7.1).
halo2_gadgets = { version = "0.3", default-features = false }
# Pasta curves (Pallas / Vesta) per whitepaper §3.9.1. Pulled in
# directly so adamant-privacy can name `pallas::Base` field-element
# types at its API boundary (Poseidon hash inputs/outputs per the
# §3.3.3 amendment instance 31). The version matches the transitive
# pin from halo2_gadgets 0.3 → halo2_poseidon 0.1 → pasta_curves
# 0.5; no version skew. Bounded-ecosystem treatment per CLAUDE.md
# §14.4 Decision 1 (interim C3; revisited at Phase 6.8 plan-gate).
pasta_curves = { version = "0.5", default-features = false, features = ["alloc", "bits"] }

# Classical signatures (whitepaper 3.4.1)
# ed25519-dalek: pinned exactly.
# Features:
#  - "zeroize"   — SigningKey impls Zeroize / ZeroizeOnDrop.
#  - "rand_core" — gates SigningKey::generate(rng) (dalek 2.2 split).
#  - "std"       — needed by the zeroize derive on dalek's SigningKey.
# `fast` (a curve25519-dalek precomputed-tables flag) is intentionally
# skipped here; we revisit performance flags before mainnet.
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["zeroize", "rand_core", "std"] }

# Post-quantum signatures (whitepaper 3.4.2). Pre-1.0; pin to the exact
# release-candidate version and revisit before each upgrade.
# Features:
#  - "rand_core" (default) — gates `MlDsa65::key_gen(rng)`.
#  - "alloc"     (default) — required by the crate's encode/decode paths.
#  - "zeroize"   (opt-in)  — derives ZeroizeOnDrop on signing keys.
# `pkcs8` is intentionally skipped — we serialise via raw bytes, not PKCS#8.
ml-dsa = { version = "=0.1.0-rc.9", default-features = false, features = ["rand_core", "alloc", "zeroize"] }
# ML-KEM-768 post-quantum KEM, per whitepaper §3.7. Same RustCrypto
# ecosystem as ml-dsa; pinned at the latest crates.io release.
ml-kem = { version = "=0.3.0", default-features = false, features = ["alloc", "zeroize"] }
# rand_core 0.10 alias for the ml-kem encapsulate path. ml-kem 0.3
# binds its `CryptoRng` to rand_core 0.10's trait surface (see
# ml-kem/src/encapsulation_key.rs); the workspace's rand_core 0.6
# entry is bound to ed25519-dalek's 2.2 trait generation, distinct
# from the rand_core 0.10 surface ml-kem uses. The two coexist via
# package aliasing — same precedent as the getrandom 0.4 dev-dep
# entry in adamant-crypto/Cargo.toml ("RustCrypto ecosystem skew",
# documented in SECURITY.md).
rand_core_0_10 = { package = "rand_core", version = "=0.10.1", default-features = false }

# BLS12-381 signatures, pairing, and threshold encryption (whitepaper 3.4.3, 3.6).
# blst: pinned to exact patch version. Default features (none) are
# what we want — blst's inline assembly for BLS12-381 is unconditional,
# not feature-gated. `portable` would disable native-CPU optimisations;
# we revisit before mainnet only if cross-compilation issues surface.
blst = "=0.3.16"

# Symmetric AEAD (whitepaper 3.5)
# chacha20poly1305: pinned to exact patch version. Resolved on the
# RustCrypto 0.10 generation (transitives align with ed25519-dalek's
# tree; no new ecosystem-skew allowlist entries needed). zeroize
# feature wires Key zeroize-on-drop through the upstream crate.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }

# Memory hygiene and constant-time helpers
zeroize = { version = "=1.8.2", features = ["derive"] }
subtle = "=2.6.1"
# rand_core: workspace-level default has only the trait surface enabled.
# Per-crate dev-deps enable `getrandom` when an OS RNG is needed in tests.
rand_core = { version = "0.6", default-features = false }

# Canonical serialisation (whitepaper 5.1.8). BCS — Binary Canonical
# Serialization — is the consensus-critical encoding for every value
# that flows through hashes, signatures, or state commitments.
# Different version pins are not acceptable here: a bcs version skew
# could produce different canonical encodings of the same logical
# value and break consensus on a multi-implementation network. Pinned
# exactly. Feature surface is minimal; the crate has no optional
# features that affect encoding semantics.
bcs = "=0.1.6"
# serde provides the derive macros bcs consumes. Pinned to the exact
# version already present transitively (verified via Cargo.lock at
# first use) so promoting it to a direct dep does not introduce a
# duplicate. Default features (std) enable the const-generic
# `[T; N]` impls for arbitrary `N` (compressed-G₁ proof commitments
# and other 48-byte / 96-byte byte newtypes need N > 32, which the
# `no_std` build does not provide); the "derive" feature gates the
# proc-macro derive crate that BCS consumes.
serde = { version = "=1.0.228", features = ["derive"] }
# serde-big-array provides Serialize/Deserialize for fixed-size byte
# arrays beyond the 32-element ceiling of `serde 1.x`'s hand-written
# impls. Used via `#[serde(with = "BigArray")]` on the byte newtypes
# (`Address`, `ObjectId`, `TypeId`, `ProofCommitment`). The crate is
# `dtolnay`-maintained (same author as `serde`), `forbid(unsafe_code)`
# upstream, single-purpose, and depends only on `serde` itself — no
# additional transitives. Pinned exactly because the canonical
# encoding it produces is consensus-critical.
serde-big-array = "=0.5.1"

# Testing
# proptest bumped from "1.5" to "1.6.0" to satisfy Sui-Move's pin at
# mainnet-v1.66.2 while remaining compatible with our existing usage.
proptest = "1.6.0"
# hex bumped from "0.4" to "0.4.3" matching Sui-Move's pin at
# mainnet-v1.66.2; backward-compatible with our existing dev-dep usage.
hex = "0.4.3"
# hex-literal bumped DOWN from "0.4" to "0.3.4" matching Sui-Move's
# pin at mainnet-v1.66.2 (required for vendoring move-bytecode-verifier
# and its transitive Sui crates per whitepaper §6.2.1.6 — Sui's
# move-bytecode-verifier-meter declares hex-literal as a dev-dep and
# its tree pins 0.3.4). Adamant's own usage is `hex!("AABB")` with
# literal hex strings (no in-string comments, the only 0.3 → 0.4
# breaking API change), so the downgrade is semantic-loss-free for
# first-party callers. Same precedent as the proptest and hex bumps
# in the prior vendoring batch.
hex-literal = "0.3.4"

# ---------------------------------------------------------------------------
# Sui-Move bytecode dependencies (whitepaper §6.2.1.1; vendored from
# Sui mainnet-v1.66.2 per vendor/README.md).
#
# Version pins below are taken verbatim from Sui's
# external-crates/move/Cargo.toml at the vendored tag. Loose pins
# (e.g. `anyhow = "1.0.52"`) match Sui's syntax; the lockfile pins
# the exact resolved version. Bumping the vendored Sui tag is an
# audit-trail commit per vendor/README.md; bumping these pins
# requires the same discipline.
# ---------------------------------------------------------------------------

# Adamant-owned crates that other Adamant crates depend on. Path
# entries enable per-crate `<crate>.workspace = true` inheritance.
adamant-bytecode-format = { path = "crates/adamant-bytecode-format" }

# Generic Cargo dependencies (Sui-Move pins, mainnet-v1.66.2).
# The first 23 entries (anyhow … variant_count) were added in the
# prior vendoring batch (commit 4164e7b) for §6.2.1.4–§6.2.1.5
# bytecode format support. The 9 entries marked NEW were added in
# this scaffold for §6.2.1.6 bytecode verifier vendoring; pins
# match Sui's `external-crates/move/Cargo.toml` at the same tag.
anyhow = "1.0.52"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
colored = "2.0.0"                                                     # NEW (§6.2.1.6 batch; transitive via move-command-line-common)
datatest-stable = "0.1.1"                                             # NEW (§6.2.1.6 batch; move-regex-borrow-graph dev-dep)
dirs-next = "2.0.0"                                                   # NEW (§6.2.1.6 batch; transitive via move-command-line-common)
ethnum = "1.0.4"
getrandom = "0.2.9"
indexmap = "2.8.0"
insta = "1.42.0"
itertools = "0.10.0"
leb128 = "0.2.5"
num = "0.4.0"
packed_struct = "0.10.1"                                              # NEW (§6.2.1.6 batch; transitive via move-command-line-common)
petgraph = "0.8.1"                                                    # NEW (§6.2.1.6 batch; direct dep of move-bytecode-verifier and move-regex-borrow-graph)
phf = { version = "0.11", features = ["macros"] }                     # NEW (§6.2.1.6 batch; transitive via move-symbol-pool)
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
proptest-derive = "0.5"
quote = "1.0.9"
rand = "0.8.0"
ref-cast = "1.0.6"
regex = "1.5.5"
serde_bytes = "0.11.5"
serde_json = "1.0.64"
serde_with = "3.9.0"
serde_yaml = "0.8.26"
sha2 = "0.9.3"                                                        # NEW (§6.2.1.6 batch; transitive via move-command-line-common — non-consensus, used for source-file fingerprinting in dev tooling)
syn = { version = "1.0.64", features = ["derive"] }
thiserror = "1.0.24"
uint = "0.9.4"
variant_count = "1.1.0"
vfs = "0.10.0"                                                        # NEW (§6.2.1.6 batch; transitive via move-command-line-common)
walkdir = "2.3.1"                                                     # NEW (§6.2.1.6 batch; transitive via move-command-line-common)

# Vendored Sui-Move crates (path entries enable per-crate
# `<crate>.workspace = true` inheritance from upstream's Cargo.tomls).
# Order: primary crate of each batch first, transitive deps after.
# Batch 1 (§6.2.1.4–§6.2.1.5: bytecode format, commit 4164e7b):
move-binary-format = { path = "vendor/move-binary-format" }
move-core-types = { path = "vendor/move-core-types" }
enum-compat-util = { path = "vendor/enum-compat-util" }
move-proc-macros = { path = "vendor/move-proc-macros" }
move-abstract-interpreter = { path = "vendor/move-abstract-interpreter" }
# Batch 2 (§6.2.1.6: bytecode verifier, this scaffold + follow-up vendor commit):
move-bytecode-verifier = { path = "vendor/move-bytecode-verifier" }
move-borrow-graph = { path = "vendor/move-borrow-graph" }
move-bytecode-verifier-meter = { path = "vendor/move-bytecode-verifier-meter" }
move-vm-config = { path = "vendor/move-vm-config" }
move-abstract-stack = { path = "vendor/move-abstract-stack" }
move-regex-borrow-graph = { path = "vendor/move-regex-borrow-graph" }
move-command-line-common = { path = "vendor/move-command-line-common" }
move-symbol-pool = { path = "vendor/move-symbol-pool" }
