[package]
name = "adamant-crypto"
description = "Cryptographic primitive wrappers for the Adamant protocol. Implements whitepaper section 3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sha3 = { workspace = true }
# HKDF-SHA3-256 backing the §7.4.2 sub-view-key derivation
# (whitepaper 7.4.2 Path 1 amendment).
hmac = { workspace = true }
hkdf = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
ml-dsa = { workspace = true }
ml-kem = { workspace = true }
# rand_core 0.10 alias for the ml-kem encapsulate path; see workspace
# dep entry for the RustCrypto-ecosystem-skew rationale.
rand_core_0_10 = { workspace = true }
blst = { workspace = true }
# Safe Rust API over blst's lower-level operations (pairings,
# hash-to-curve, scalar arithmetic, G₂ scalar multiplication on a known
# generator) used by `threshold` (whitepaper 3.6). The split exists
# specifically to contain the `unsafe` FFI surface required by those
# operations behind a safe API; this crate retains the workspace
# `unsafe_code = forbid` lint. See `SECURITY.md` "Adamant-authored
# `unsafe` surface" for the architecture.
adamant-crypto-blst-extra = { path = "../adamant-crypto-blst-extra" }
chacha20poly1305 = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
# BCS canonical serialisation (whitepaper §5.1.8) for §3.8 time-lock VDF
# wire types (`vdf` module). Phase 7.5.0 introduces the BCS dep so the
# Wesolowski wire surface — `TimeLockParameters`, `ClassGroupElement`,
# `WesolowskiProof`, `TimeLockEnvelope`, `TimeLockDecryption` — round-
# trips through the same canonical encoding as every other consensus-
# stable Adamant type.
bcs = { workspace = true }
serde = { workspace = true }
# Big-integer arithmetic for Phase 7.5.1+ Wesolowski VDF class-group
# layer (`vdf::bqf` binary quadratic forms over imaginary quadratic
# order). Cat E workspace utility per CLAUDE.md §14.1 — mirrors the
# `petgraph` / `ethnum` posture: mature, non-consensus-defining
# infrastructure where Adamant-native reimplementation is audit-net-
# negative.
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
proptest = { workspace = true }
# `getrandom` enables `rand_core::OsRng` for the Ed25519 generate-test.
# Production code passes its own CSPRNG; this feature is dev-only.
rand_core = { workspace = true, features = ["getrandom"] }
# getrandom 0.4 supplies `SysRng` and re-exports `rand_core` (matching
# the rand_core 0.10 ecosystem that ml-dsa depends on); used by the
# ML-DSA generate-test. Distinct from the `rand_core` 0.6 entry above;
# the two coexist because the RustCrypto ecosystem mid-migrates between
# trait-version generations (see SECURITY.md "RustCrypto ecosystem skew").
getrandom = { version = "0.4", features = ["std", "sys_rng"] }

[lints]
workspace = true
